--- a/src/components/common/ServiceElement.astro
+++ b/src/components/common/ServiceElement.astro
@@ -9,15 +9,15 @@ export interface Props{
 const { number, title, text, nombre } = Astro.props
 ---
 
-<div class="flex flex-row border border-gray-300">
-    <div class="w-5 border bg-gray-300"></div>
-    <div class="flex flex-col p-8 gap-5 justify-between transition-colors duration-500 border border-gray-300 hover:border-reciclacel_green">
-        <div class="w-full flex flex-col gap-5 mb-5">
-            <span class="text-5xl font-archivo text-gray-200">{ number }</span>
-            <h3 class="text-3xl tracking-tight leading-normal font-medium font-roboto first-letter:uppercase">{ title }</h3>
-            <p class="text-xl font-roboto text-[#202C38]">{ text }</p>
+<div class="flex flex-row">
+    <div class="w-6 3xl:w-8 4xl:w-10 border bg-[#D9D9D9]"></div>
+    <div class="flex flex-col p-8 md:p-10 3xl:p-14 gap-5 justify-between transition-colors duration-500 border border-gray-300 hover:border-reciclacel_green">
+        <div class="w-full flex flex-col gap-5 3xl:gap-8 4xl:gap-14 mb-5">
+            <span class="text-5xl 3xl:text-6xl 4xl:text-8xl font-archivo font-bold text-gray-200">{ number }</span>
+            <h3 class="text-3xl 3xl:text-4xl 4xl:text-5xl tracking-tight leading-normal font-medium font-roboto first-letter:uppercase">{ title }</h3>
+            <p class="text-xl 3xl:text-2xl 4xl:text-3xl font-roboto text-[#202C38]">{ text }</p>
         </div>
-        <a class="text-lg uppercase font-medium font-roboto tracking-widest flex flex-row items-center gap-1 text-reciclacel_green" href=`/service/${nombre}`>
+        <a class="text-lg 3xl:text-xl 4xl:text-2xl uppercase font-medium font-roboto tracking-widest flex flex-row items-center gap-1 text-reciclacel_green" href=`/service/${nombre}`>
             <span>leer más</span>
             <i class="bi bi-arrow-right-short text-3xl"></i>
         </a>
