--- a/src/layouts/common/Services.astro
+++ b/src/layouts/common/Services.astro
@@ -6,13 +6,13 @@ import "bootstrap-icons/font/bootstrap-icons.css"
 
 <Container>
     <div class="w-full flex flex-col gap-9">
-        <h2 class="text-3xl font-kanit font-bold uppercase">
+        <h2 class="text-3xl 3xl:text-4xl 4xl:text-5xl font-kanit font-bold uppercase">
             <span>servicio</span>
             <span class="text-reciclacel_green">sustentable</span>
         </h2>
-        <p class="font-roboto text-[#000810]">Somos proveedores de cajas y cubetas de plástico. Contamos con un abastecimiento constante, nos <br>
+        <p class="font-roboto 3xl:text-2xl 4xl:text-3xl text-[#000810]">Somos proveedores de cajas y cubetas de plástico. Contamos con un abastecimiento constante, nos <br>
             enfocamos en realizar un servicio profesional y de alto cuidado hacia nuestros socios.</p>
-        <div class="w-full grid grid-cols-1 md:grid-cols-2 xl:grid-cols-3 gap-10">
+        <div class="w-full grid grid-cols-1 md:grid-cols-2 xl:grid-cols-3 gap-8">
             <ServiceElement number="1" title="reciclaje integral" text="Proceso integral de ingeniería y manufactura de plástico por medio de recolección de scrap en industrias." nombre="reciclaje_integral"/>
             <ServiceElement number="2" title="inyección de plástico" text="Desarrollo de fundición de polímeros inyectados a presión, posteriormente solidificados." nombre="inyeccion_plastico"/>
             <ServiceElement number="3" title="logística" text="Ofrecemos servicio de entrega que garantiza un abastecimiento correcto en la linea de producción." nombre="logistica"/>
