--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,10 @@
 ---
 import Services from "../layouts/common/Services.astro";
+import GridProducts from "../layouts/home/GridProducts.astro";
 import MainLayout from "./../layouts/common/MainLayout.astro"
 ---
 
 <MainLayout>
 	<Services/>
+	<GridProducts/>
 </MainLayout>
