--- a/src/layouts/home/GridProducts.astro
+++ b/src/layouts/home/GridProducts.astro
@@ -7,7 +7,7 @@ import Container from "../common/Container.astro";
 
 <Container background="bg-reciclacel_green" subtitleText="productos" subtitleTextColor="text-white" subtitleTextLineColor="#FFFFFF">
     <div class="w-full flex flex-col gap-9">
-        <TitleSection text1="calidad y " text2="profesionalismo" textColor1="text-white" textColor2="text-white" />
+        <TitleSection text1="calidad y<br>" text2="profesionalismo" textColor1="text-white" textColor2="text-white" />
         <ParagraphSection
             text="Ideales para la industria alimentaria, diseñados para mantener la calidad durante el <br> almacenamiento y transporte de la mercancía."
             textColor="text-white"
