--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,10 +1,12 @@
 ---
 import Services from "../layouts/common/Services.astro";
 import GridProducts from "../layouts/home/GridProducts.astro";
+import Solutions from "../layouts/home/Solutions.astro";
 import MainLayout from "./../layouts/common/MainLayout.astro"
 ---
 
 <MainLayout>
 	<Services/>
 	<GridProducts/>
+	<Solutions/>
 </MainLayout>
