feat: añadiendo seccion de cotización en home

--- a/src/layouts/home/Solutions.astro
+++ b/src/layouts/home/Solutions.astro
@@ -32,7 +32,7 @@ import Container from "../common/Container.astro";
             </div>
             <div class="basis-1/2 p-8 sm:p-[60px] bg-[#C9D2DE]">
                 <q class="text-xl sm:text-[26px] 3xl:text-3xl 4xl:text-4xl font-archivo font-bold leading-6 sm:leading-8 tracking-tighter" style="quotes: none;">En Reciclacel pudimos tener una pronta respuesta sobre nuestros requerimientos y su logística nos ayudó a cumplir con nuestra meta.</q>
-                <div class="flex w-full justify-between items-center mt-5">
+                <div class="flex w-full justify-between items-center mt-5 2xl:mt-10">
                     <div class="flex flex-col gap-1 font-archivo text-lg sm:text-xl 3xl:text-2xl 4xl:text-3xl">
                         <span class="font-bold">René R.</span>
                         <span >Jefe de distribución</span>
@@ -43,7 +43,7 @@ import Container from "../common/Container.astro";
                     </svg>
                 </div>
             </div>
-            <div class="w-full sm:w-fit block md:hidden"><LinkButton text="nuestros servicios" link="/services"/></div>
         </div>
+        <div class="w-full sm:w-fit"><LinkButton text="ir a productos" link="#"/></div>
     </div>
 </Container>
