--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import Services from "../layouts/common/Services.astro";
 import GridProducts from "../layouts/home/GridProducts.astro";
+import QuoteProcess from "../layouts/home/QuoteProcess.astro";
 import Solutions from "../layouts/home/Solutions.astro";
 import MainLayout from "./../layouts/common/MainLayout.astro"
 ---
@@ -9,4 +10,5 @@ import MainLayout from "./../layouts/common/MainLayout.astro"
 	<Services/>
 	<GridProducts/>
 	<Solutions/>
+	<QuoteProcess/>
 </MainLayout>
