feat: terminando vista de formulario de contacto

--- a/src/layouts/common/MainLayout.astro
+++ b/src/layouts/common/MainLayout.astro
@@ -11,6 +11,9 @@
 
 		<!--FONTS -->
 		<link rel='stylesheet' href='/styles.css' />
+
+		<!--ReCaptcha -->
+		<script src="https://www.google.com/recaptcha/api.js" async defer></script>
 	</head>
 	<body>
 		<slot/>
