--- a/src/layouts/home/QuoteProcess.astro
+++ b/src/layouts/home/QuoteProcess.astro
@@ -7,7 +7,7 @@ import Container from "../common/Container.astro";
 
 ---
 
-<section class="w-full py-20 md:py-44 bg-reciclacel_dark_blue">
+<section class="w-full py-20 lg:py-44 bg-reciclacel_dark_blue">
     <div class="max-w-full xl:max-w-7xl 2xl:max-w-[95.5rem] 3xl:max-w-[120rem] mx-auto px-5 flex flex-col">
         <SubtitleWithLine text="claridad en el servicio" textColor="text-white" color="#FFC630" />
         <TitleSection text1="proceso de " text2="cotización" textColor1="text-white" textColor2="text-reciclacel_green" />
