--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import ContactForm from "../layouts/common/ContactForm.astro";
 import Services from "../layouts/common/Services.astro";
 import GridProducts from "../layouts/home/GridProducts.astro";
 import QuoteProcess from "../layouts/home/QuoteProcess.astro";
@@ -11,4 +12,5 @@ import MainLayout from "./../layouts/common/MainLayout.astro"
 	<GridProducts/>
 	<Solutions/>
 	<QuoteProcess/>
+	<ContactForm/>
 </MainLayout>
