--- a/src/layouts/common/Container.astro
+++ b/src/layouts/common/Container.astro
@@ -11,8 +11,8 @@ export interface Props {
 const { background = "bg-white", subtitleText, subtitleTextColor = "text-black", subtitleTextLineColor } = Astro.props
 ---
 
-<section class:list={["w-full", background]}>
-    <div class="max-w-full xl:max-w-7xl 2xl:max-w-[95.5rem] 3xl:max-w-[120rem] mx-auto px-5 py-20 md:py-44 flex flex-col">
+<section class:list={["w-full overflow-hidden", background]}>
+    <div class="max-w-full xl:max-w-7xl 2xl:max-w-[95.5rem] 3xl:max-w-[120rem] mx-auto px-5 py-20 lg:py-44 flex flex-col">
         <SubtitleWithLine text={subtitleText} textColor={subtitleTextColor} color={subtitleTextLineColor} />
         <slot/>
     </div>
