feat: seccion de partners terminada

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import ContactForm from "../layouts/common/ContactForm.astro";
 import Services from "../layouts/common/Services.astro";
 import GridProducts from "../layouts/home/GridProducts.astro";
+import Partners from "../layouts/home/Partners.astro";
 import QuoteProcess from "../layouts/home/QuoteProcess.astro";
 import Solutions from "../layouts/home/Solutions.astro";
 import MainLayout from "./../layouts/common/MainLayout.astro"
@@ -13,4 +14,5 @@ import MainLayout from "./../layouts/common/MainLayout.astro"
 	<Solutions/>
 	<QuoteProcess/>
 	<ContactForm/>
+	<Partners/>
 </MainLayout>
