feat: terminando footer

--- a/src/layouts/common/ContactForm.astro
+++ b/src/layouts/common/ContactForm.astro
@@ -13,11 +13,11 @@ import LInksContactForm from "../../components/common/LInksContactForm.astro";
         <div class="w-full flex flex-col lg:flex-row gap-14">
             <form class="w-full lg:w-3/4 flex flex-col gap-8">
                 <div class="w-full flex flex-col lg:flex-row gap-8">
-                    <Input name={"name"} type={"text"} placeholder={'nombre'} />
-                    <Input name={"phone"} type={"tel"} placeholder={'teléfono'} />
+                    <Input name={"name_contact_form"} type={"text"} placeholder={'nombre'} />
+                    <Input name={"phone_contact_form"} type={"tel"} placeholder={'teléfono'} />
                 </div>
-                <Input name={"email"} type={"email"} placeholder={'correo electrónico'} />
-                <Textarea rows={"5"} name={"mensaje"} placeholder={"mensaje"} />
+                <Input name={"email_contact_form"} type={"email"} placeholder={'correo electrónico'} />
+                <Textarea rows={"5"} name={"mensaje_contact_form"} placeholder={"mensaje"} />
                 <div class="w-full flex flex-col sm:flex-row justify-between gap-8">
                     <div class="g-recaptcha" data-sitekey="6Le_eIcjAAAAAJ4_4gq6r_op9HY-fRLnGzY1VYtm"></div>
                     <div class="w-full sm:w-fit">
