--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,7 @@
 ---
 import ContactForm from "../layouts/common/ContactForm.astro";
+import Footer from "../layouts/common/Footer.astro";
+import ScrapForm from "../layouts/common/ScrapForm.astro";
 import Services from "../layouts/common/Services.astro";
 import GridProducts from "../layouts/home/GridProducts.astro";
 import Partners from "../layouts/home/Partners.astro";
@@ -15,4 +17,6 @@ import MainLayout from "./../layouts/common/MainLayout.astro"
 	<QuoteProcess/>
 	<ContactForm/>
 	<Partners/>
+	<ScrapForm/>
+	<Footer/>
 </MainLayout>
