--- a/src/layouts/home/QuoteProcess.astro
+++ b/src/layouts/home/QuoteProcess.astro
@@ -1,9 +1,8 @@
 ---
-import LinkButton from "../../components/common/LinkButton.astro";
-import ProgressTrackerElement from "../../components/common/ProgressTrackerElement.astro";
-import SubtitleWithLine from "../../components/common/SubtitleWithLine.astro";
-import TitleSection from "../../components/common/TitleSection.astro";
-import Container from "../common/Container.astro";
+import LinkButton from "../../components/common/LinkButton.astro"
+import ProgressTrackerElement from "../../components/common/ProgressTrackerElement.astro"
+import SubtitleWithLine from "../../components/common/SubtitleWithLine.astro"
+import TitleSection from "../../components/common/TitleSection.astro"
 
 ---
 
@@ -23,8 +22,11 @@ import Container from "../common/Container.astro";
             </div>
         </div>
     </div>
-    <div class="w-full sm:w-fit px-5">
-        <LinkButton link="/" text="cotiza ahora"/>
+
+    <div class="max-w-full xl:max-w-7xl 2xl:max-w-[95.5rem] 3xl:max-w-[120rem] mx-auto px-5 flex flex-col">
+        <div class="w-full sm:w-fit px-5">
+            <LinkButton link="/" text="cotiza ahora"/>
+        </div>
     </div>
 </section>
 
