refactor: agregando alt a imagenes

--- a/src/layouts/common/ContactForm.astro
+++ b/src/layouts/common/ContactForm.astro
@@ -1,10 +1,10 @@
 ---
-import TitleSection from "../../components/common/TitleSection.astro";
-import Input from "../../components/common/Input.astro";
-import Textarea from "../../components/common/Textarea.astro";
-import Button from "../../components/common/Button.astro";
-import Container from "./Container.astro";
-import LInksContactForm from "../../components/common/LInksContactForm.astro";
+import TitleSection from "../../components/common/TitleSection.astro"
+import Input from "../../components/common/Input.astro"
+import Textarea from "../../components/common/Textarea.astro"
+import Button from "../../components/common/Button.astro"
+import Container from "./Container.astro"
+import LInksContactForm from "../../components/common/LInksContactForm.astro"
 ---
 
 <Container subtitleText="contacto" subtitleTextLineColor="#FFC630">
