--- a/src/layouts/home/Partners.astro
+++ b/src/layouts/home/Partners.astro
@@ -8,12 +8,12 @@ import Container from "../common/Container.astro";
     <div class="w-full flex flex-col gap-4 sm:gap-9">
         <TitleSection text1="unión y " text2="confianza" textColor1="text-black" textColor2="text-reciclacel_green" />
         <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-6 gap-5 md:gap-10 w-full">
-            <div class="w-full flex justify-start lg:justify-center items-center"><img class="w-full sm:w-3/4 lg:w-full h-auto object-contain" src="/img/partners/sigma.webp" /></div>
-            <div class="w-full flex justify-end md:justify-center items-center"><img class="w-full sm:w-3/4 lg:w-full h-auto object-contain" src="/img/partners/capistrano.webp" /></div>
-            <div class="w-full flex justify-start md:justify-end lg:justify-center items-center"><img class="w-full sm:w-3/4 lg:w-full h-auto object-contain" src="/img/partners/elmexicano.webp" /></div>
-            <div class="w-full flex justify-end md:justify-start lg:justify-center items-center"><img class="w-full sm:w-3/4 lg:w-full h-auto object-contain" src="/img/partners/fud.webp" /></div>
-            <div class="w-full flex justify-start md:justify-center items-center"><img class="w-full sm:w-3/4 lg:w-full h-auto object-contain" src="/img/partners/omex.webp" /></div>
-            <div class="w-full flex justify-end lg:justify-center items-center"><img class="w-full sm:w-3/4 lg:w-full h-auto object-contain" src="/img/partners/yoplait.webp" /></div>
+            <div class="w-full flex justify-start lg:justify-center items-center"><img class="w-full sm:w-3/4 lg:w-full h-auto object-contain" src="/img/partners/sigma.webp" alt="Sigma" /></div>
+            <div class="w-full flex justify-end md:justify-center items-center"><img class="w-full sm:w-3/4 lg:w-full h-auto object-contain" src="/img/partners/capistrano.webp" alt="Capistrano" /></div>
+            <div class="w-full flex justify-start md:justify-end lg:justify-center items-center"><img class="w-full sm:w-3/4 lg:w-full h-auto object-contain" src="/img/partners/elmexicano.webp" alt="El Méxicano" /></div>
+            <div class="w-full flex justify-end md:justify-start lg:justify-center items-center"><img class="w-full sm:w-3/4 lg:w-full h-auto object-contain" src="/img/partners/fud.webp" alt="Fud" /></div>
+            <div class="w-full flex justify-start md:justify-center items-center"><img class="w-full sm:w-3/4 lg:w-full h-auto object-contain" src="/img/partners/omex.webp" alt="Omex" /></div>
+            <div class="w-full flex justify-end lg:justify-center items-center"><img class="w-full sm:w-3/4 lg:w-full h-auto object-contain" src="/img/partners/yoplait.webp" alt="Yoplait" /></div>
         </div>
     </div>
 </Container>
