--- a/src/layouts/home/QuoteProcess.astro
+++ b/src/layouts/home/QuoteProcess.astro
@@ -25,7 +25,7 @@ import TitleSection from "../../components/common/TitleSection.astro"
 
     <div class="max-w-full xl:max-w-7xl 2xl:max-w-[95.5rem] 3xl:max-w-[120rem] mx-auto px-5 flex flex-col">
         <div class="w-full sm:w-fit px-5">
-            <LinkButton link="/" text="cotiza ahora"/>
+            <LinkButton  link={{ text: "cotiza ahora", link: "/" }}/>
         </div>
     </div>
 </section>
