--- a/src/components/common/ContactNetworkElementFooter.astro
+++ b/src/components/common/ContactNetworkElementFooter.astro
@@ -1,14 +1,14 @@
 ---
+import type { Link } from '../../utilities/types'
 export interface Props {
     icon: string
-    text: string
-    link: string
+    link: Link
 }
 
-const { icon, text, link } = Astro.props
+const { icon, link } = Astro.props
 ---
 
 <li class="flex gap-2 items-center">
     <i class:list={[`text-xl 2xl:text-3xl 3xl:text-4xl bi ${icon} text-reciclacel_green`]}></i>
-    <a class="flex flex-col font-roboto leading-6 text-base md:text-lg 3xl:text-2xl 4xl:text-3xl first-letter:uppercase text-white" href={link}>{text}</a>
+    <a class="flex flex-col font-roboto leading-6 text-base md:text-lg 3xl:text-2xl 4xl:text-3xl first-letter:uppercase text-white" href={link.link}>{link.text}</a>
 </li>
