--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import BlogCatalog from "../layouts/common/BlogCatalog.astro";
 import ContactForm from "../layouts/common/ContactForm.astro";
 import Footer from "../layouts/common/Footer.astro";
 import ScrapForm from "../layouts/common/ScrapForm.astro";
@@ -15,6 +16,7 @@ import MainLayout from "./../layouts/common/MainLayout.astro"
 	<GridProducts/>
 	<Solutions/>
 	<QuoteProcess/>
+	<BlogCatalog />
 	<ContactForm/>
 	<Partners/>
 	<ScrapForm/>
