--- a/src/layouts/common/MainLayout.astro
+++ b/src/layouts/common/MainLayout.astro
@@ -1,4 +1,5 @@
 ---
+import Menu from '../common/Menu.astro'
 ---
 
 <html lang="en">
@@ -16,6 +17,7 @@
 		<script src="https://www.google.com/recaptcha/api.js" async defer></script>
 	</head>
 	<body>
+		<Menu />
 		<slot/>
 	</body>
 </html>
