--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,7 @@ import Solutions from "../layouts/home/Solutions.astro";
 import MainLayout from "./../layouts/common/MainLayout.astro"
 ---
 
-<MainLayout>
+<MainLayout currentPage="inicio">
 	<Services/>
 	<GridProducts/>
 	<Solutions/>
