--- a/src/layouts/common/Menu.astro
+++ b/src/layouts/common/Menu.astro
@@ -11,5 +11,5 @@ const { currentPage } = Astro.props
 
 <header>
     <BarMenu currentPage={currentPage} />
-    <FullMenu />
+    <FullMenu currentPage={currentPage} />
 </header>
