feat: añadiendo hero a home
falta corregit compormatiendo de slider

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,7 @@ import Footer from "../layouts/common/Footer.astro";
 import ScrapForm from "../layouts/common/ScrapForm.astro";
 import Services from "../layouts/common/Services.astro";
 import GridProducts from "../layouts/home/GridProducts.astro";
+import Hero from "../layouts/home/Hero.astro";
 import Partners from "../layouts/home/Partners.astro";
 import QuoteProcess from "../layouts/home/QuoteProcess.astro";
 import Solutions from "../layouts/home/Solutions.astro";
@@ -13,6 +14,7 @@ import MainLayout from "./../layouts/common/MainLayout.astro"
 ---
 
 <MainLayout currentPage="inicio">
+	<Hero/>
 	<Services/>
 	<GridProducts/>
 	<Solutions/>
